add key bind for ess-switch-process

--- a/templates/preamble.tex
+++ b/templates/preamble.tex
@@ -209,8 +209,8 @@
 %\newcommand{\sub}{\mathrm{sub}}
 \DeclareMathOperator{\dom}{dom}
 \DeclareMathOperator{\sub}{sub}
-\DeclareMathOperator{\argmin}{argmin}
-\DeclareMathOperator{\argmax}{argmax}
+\DeclareMathOperator*{\argmin}{argmin}
+\DeclareMathOperator*{\argmax}{argmax}
 
 
 
