--- a/Emacs.org
+++ b/Emacs.org
@@ -118,7 +118,7 @@
     :custom ((doom-modeline-height 15)))
 #+end_src
 
-** Delimeters
+** Delimiters
 #+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
   (use-package rainbow-delimiters
     :hook (prog-mode . rainbow-delimiters-mode))
@@ -372,6 +372,26 @@ We can further use the following config to allow us move between windown with =s
 (add-hook 'org-mode-hook (lambda () (add-hook 'after-save-hook #'wgw/org-babel-tangle-config)))
 #+end_src
 
+* File Management
+
+** Dired
+#+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
+  (use-package dired
+    :ensure nil
+    :commands (dired dired-jump)
+    :bind (("C-x C-j" . dired-jump))
+    :custom ((dired-listing-switches "-agho --group-directories-first"))
+    ;; :config
+    ;; (evil-collection-define-key 'normal 'dired-mode-map
+    ;;   "h" 'dired-single-up-directory
+    ;;   "l" 'dired-single-buffer)
+    )
+
+  (use-package dired-single)
+
+  (use-package all-the-icons-dired
+  :hook (dired-mode . all-the-icons-dired-mode))
+#+end_src
 * Development Tools
 ** Language Server
 #+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
@@ -501,7 +521,7 @@ Then we set =aspell= to be used by =ispell=.
     (setq eshell-destroy-buffer-when-process-dies t)
     (setq eshell-visual-commands '("htop" "zsh" "vim")))  
   (eshell-git-prompt-use-theme 'robbyrussell))
-
+  
 #+end_src
 * Programming Languages
 ** R
