config pyvenv WORKON_HOME, config python eval in repl

--- a/Emacs.org
+++ b/Emacs.org
@@ -380,7 +380,7 @@ We can further use the following config to allow us move between windown with =s
     :ensure nil
     :commands (dired dired-jump)
     :bind (("C-x C-j" . dired-jump))
-    :custom ((dired-listing-switches "-agho --group-directories-first"))
+    ;;:custom ((dired-listing-switches "-agho --group-directories-first"))
     ;; :config
     ;; (evil-collection-define-key 'normal 'dired-mode-map
     ;;   "h" 'dired-single-up-directory
@@ -599,9 +599,28 @@ Python Language server and =lsp-python-ms= have been archived and are now replac
 #+end_src
 
 #+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
-  (use-package pyvenv
+  (use-package highlight-indent-guides
     :config
-    (add-hook 'python-mode-hook 'pyvenv-mode ))
+    (add-hook 'python-mode-hook 'highlight-indent-guides-mode)
+    (setq highlight-indent-guides-method 'column))
+#+end_src
+
+#+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
+  (use-package pyvenv
+    :init (setenv "WORKON_HOME" "/opt/homebrew/Caskroom/miniforge/base/envs")
+    :config
+    (add-hook 'python-mode-hook 'pyvenv-mode ))  
+#+end_src
+
+**** Eval in Repl
+#+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
+  (use-package eval-in-repl
+    :config
+    (setq eir-repl-placement 'right)
+    (require 'eval-in-repl-python)
+    (add-hook 'python-mode-hook
+            '(lambda ()
+               (local-set-key (kbd "<C-return>") 'eir-eval-in-python))))
 #+end_src
 
 *** EIN
