--- a/Emacs.org
+++ b/Emacs.org
@@ -430,6 +430,41 @@ We can further use the following config to allow us move between windown with =s
 #+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
 (use-package htmlize)
 #+end_src
+
+** Export Org mode files into awesome HTML
+Using a theme from the theme gallery for your own Org documents is very easy:
+1. Add a =#+SETUPFILE:= directive in the preamble of your document (to include the necessary CSS and JavaScript files).
+2. Then, you export your Org mode file to HTML with org-html-export-to-html or with =C-c C-e h h=.
+
+See the following two links for more details and themes:
+- https://github.com/fniessen/org-html-themes
+- https://olmon.gitlab.io/org-themes/
+
+** Org Roam
+#+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
+  (use-package org-roam
+    :ensure t
+    :init
+    (setq org-roam-v2-ack t)
+    :custom 
+    (org-roam-directory "/Users/wgw/Dropbox/RoamNotes")
+    (org-roam-completion-everywhere t)
+    :bind (("C-c n l" . org-roam-buffer-toggle)
+           ("C-c n f" . org-roam-node-find)
+           ("C-c n i" . org-roam-node-insert)
+           :map org-mode-map
+           ("C-M-i" . completion-at-point)
+           :map org-roam-dailies-map
+           ("Y" . org-roam-dailies-capture-yesterday)
+           ("T" . org-roam-dailies-capture-tomorrow))
+    :bind-keymap
+    ("C-c n d" . org-roam-dailies-map)
+    :config
+    (require 'org-roam-dailies) ;; Ensure the keymap is available
+    (org-roam-db-autosync-mode))
+
+
+#+end_src
 * File Management
 ** Dired
 
@@ -458,29 +493,29 @@ We can further use the following config to allow us move between windown with =s
 * Development Tools
 ** Language Server
 #+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
-      (defun wgw/lsp-mode-setup ()
-        (setq lsp-headerline-breadcrumb-segments '(path-up-to-project file symbols))
-        (lsp-headerline-breadcrumb-mode))
+  (defun wgw/lsp-mode-setup ()
+    (setq lsp-headerline-breadcrumb-segments '(path-up-to-project file symbols))
+    (lsp-headerline-breadcrumb-mode))
 
-      (use-package lsp-mode
-        :commands (lsp lsp-deferred)
-        :hook (lsp-mode . wgw/lsp-mode-setup)
-        :init
-        (setq lsp-keymap-prefix "C-c l")  ;; Or 'C-l', 's-l'
-        :config 
-        (lsp-enable-which-key-integration t)
-        :custom
-        (lsp-enable-file-watchers nil))
+  (use-package lsp-mode
+    :commands (lsp lsp-deferred)
+    :hook (lsp-mode . wgw/lsp-mode-setup)
+    :init
+    (setq lsp-keymap-prefix "C-c l")  ;; Or 'C-l', 's-l'
+    :config 
+    (lsp-enable-which-key-integration t)
+    :custom
+    (lsp-enable-file-watchers nil))
 
-      (use-package lsp-ui
-        :hook (lsp-mode . lsp-ui-mode)
-        :custom
-        (lsp-ui-doc-position 'bottom))
+  (use-package lsp-ui
+    :hook (lsp-mode . lsp-ui-mode)
+    :custom
+    (lsp-ui-doc-position 'bottom))
 
-      (use-package lsp-treemacs
-        :after lsp)
+  (use-package lsp-treemacs
+    :after lsp)
 
-      (use-package lsp-ivy)
+  (use-package lsp-ivy)
 #+end_src
 
 ** Company Mode
